Tengo los errores del Sprint 2 ya corregidos, corregidos los DTO, el select y el details y las pruebas. También he terminado la IU del select y del details.
